// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Большой размер: large-button 1`] = `
<button
  class="undefined undefined"
>
  Click me
</button>
`;

exports[`Button Дэфолтный рендеринг: default-button 1`] = `
<button
  class="undefined undefined"
>
  Click me
</button>
`;

exports[`Button Маленький размер: small-button 1`] = `
<button
  class="undefined function small() { [native code] }"
  data-testid="small-button"
>
  Click me
</button>
`;
